--- a/index.html
+++ b/index.html
@@ -2,39 +2,38 @@
     <head>
         <title>IQ Web</title>
         <!--ini bagian kepala website, terdiri dari judul, title, dsb.-->
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer" >
+
     </head>
     <body>
+        <nav>
+            <div class="nav-left">
+                <ul>
+                    <li>
+                        <img src="image/logo.png" alt="Dumbways_logo" />
+                    </li>
+                     <li>
+                        <a class="active" href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Blog</a>
+                    </li>
+                 </ul>
+            </div>
+            <div class="nav-right">
+                <a href="contact.html">Contact</a>
+            </div>
+        </nav>
+        <div class="container">
+                <section>
+                    <div class="left">
         <div style="
-        width: 500px; 
-        margin: 40px auto;
-        padding: 60px;
-        background-color: white;
-        border-radius: 30px; border-color:black">
-        <h2>Hi Welcome to My Profile</h2>
-        <p style="text-align: justify;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas earum aliquam corrupti
-            nihil. Tempora, labore. Eum cum alias sequi cupiditate impedit corporis fugit, veniam magni nostrum nesciunt
-            officiis eligendi. Sit!</p>
-        <button style="
-        border-radius: 10px;
-        border: 5px;
-        padding: 4px 20px 4px 20px;
-        background-color: black;
-        color: white"
-        >Contact</button>
-        <p>Download CV
-            <img style="width: 5%" src="image/download.png" href="" alt="download">
-        </p>
-        <h6 style="text-align: center">
-            <img src="image/linkedin.png" alt="linkedin" style="width: 7%; margin: 5px">
-            <img src="image/instagram (1).png" alt="Instagram" style="width: 7%; margin: 5px">
-            <img src="image/facebook.png" alt="Facebook" style="width: 7%; margin: 5px">
-            <img src="image/youtube.png" alt="Youtube" style="width: 7%; margin: 5px">
-        </h6>
-
-        <div style="
-        width: 350px;
+        width: 300px;
         border: 1px solid black;
-        margin: 10px auto;
+        margin: 0 auto;
         padding: 10px;
         border-radius: 10px;
         box-shadow: 0 0 15px #cecece
@@ -60,12 +59,44 @@
             </table>
             <!--style width 100% persen diatas namanya sistem parent and child, artinya gambar 100% memenuhi border 350 px diatas
                 semakin naik angka suatu header makin kecil h1 paling besar dan seterusnya-->
+            </div>
+        </div>
+        <div class="right">
+            <h2>Hi Welcome to My Profile</h2>
+            <p style="text-align: justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas earum aliquam corrupti
+            nihil. Tempora, labore. Eum cum alias sequi cupiditate impedit corporis fugit, veniam magni nostrum nesciunt
+            officiis eligendi. Sit!</p>
+            <div class="skill">
+                <div>
+                    <img src="image/logo.png" alt="" />
+                    <h2>Javascript</h2>
+                    <p text-align="justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas earum aliquam corrupti nihil. Tempora, labore. Eum cum alias sequi cupiditate impedit corporis fugit, veniam magni nostrum nesciunt officiis eligendi. Sit
+                    </p>
+                </div>
+                <div>
+                    <img src="image/logo.png" alt="" />
+                    <h2>Github</h2>
+                    <p text-align="justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas earum aliquam corrupti nihil. Tempora, labore. Eum cum alias sequi cupiditate impedit corporis fugit, veniam magni nostrum nesciunt officiis eligendi. Sit</p>
+                </div>
+                <div>
+                    <img src="image/logo.png" alt="" />
+                    <h2>Deployment</h2>
+                    <p text-align="justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas earum aliquam corrupti nihil. Tempora, labore. Eum cum alias sequi cupiditate impedit corporis fugit, veniam magni nostrum nesciunt officiis eligendi. Sit</p>
+                </div>
+            </div>
+            <div class="social-media">
+                <h2>Found me on</h2>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-square-instagram"></i>
+            </div>
+        </div>
+    </section>
         </div>
         <!--margin mengatur jarak sebelah atas, kanan bawah dan kiri konten sedangkan text align untuk mengatur konten kita mau ditaruh dimana
             margin/padding punya 4 value, yaitu atas, kanan, bawah, dan kiri-->    
         <!--semi coloun atau titik koma untuk memisahkan dua property-->
-        <div>
             <!--untuk melakukan grouping elemen agar mempermudah kita untuk melakukan styling-->
-        </div>
     </body>
 </html>
