Creating Blog Page

--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,29 @@
 <html>
     <head>
         <title>Contact Me</title>
-        <link rel="stylesheet" href="contact.css"/>
+        <link rel="icon" href="image/logo.png" type="image_icon">
+        <link rel="stylesheet" href="css/contact.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <nav>
+            <div class="nav-left">
+                <ul>
+                    <li>
+                        <img src="image/logo.png" alt="Dumbways_logo" />
+                    </li>
+                     <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="my-project.html">My Project</a>
+                    </li>
+                 </ul>
+            </div>
+            <div class="nav-right">
+                <a href="contact.html">Contact</a>
+            </div>
+        </nav>
         <form>
         <div>
             <label for="input-name">Name</label>
@@ -31,6 +51,6 @@
         </div>    
             <button type="button" onclick="submitData()">submit</button>
         </form>
-        <script src="contact.js"></script>
+        <script src="js/contact.js"></script>
     </body>
 </html>
