--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
     <head>
-        <title>IQ Web</title>
+        <title>Home</title>
         <!--ini bagian kepala website, terdiri dari judul, title, dsb.-->
-        <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="image/logo.png" type="image_icon">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         crossorigin="anonymous"
         referrerpolicy="no-referrer" >
@@ -19,7 +20,7 @@
                         <a class="active" href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="#">Blog</a>
+                        <a href="my-project.html">My Project</a>
                     </li>
                  </ul>
             </div>
@@ -32,7 +33,7 @@
                     <div class="left">
         <div style="
         width: 300px;
-        border: 1px solid black;
+        border: 1px solid #dbdbdb;
         margin: 0 auto;
         padding: 10px;
         border-radius: 10px;
@@ -40,10 +41,9 @@
         "
         >
             <img style="width: 100%; border-radius: 10px 10px 0 0"
-            src="image/Iki.jpg"
-            alt="Muhammad Rizki Budiman"/>
-            <h2>Muhammad Rizki B</h2>
-            <p>Alumni Universitas Islam Negeri Alauddin Makassar yang berasal dari Kabupaten Bima </p>
+            src="image/kucing.jpg"
+            alt="menggg"/>
+            <h2 style="text-align: center">Muhammad Rizki B</h2>
 
             <table style="border: 1px solid grey; width: 100%; text-align: center; border-collapse: collapse; margin-bottom: 10px
             "
@@ -53,7 +53,7 @@
                     <th>Year</th>
                 </tr>
                 <tr>
-                    <td>Backend Developer</td>
+                    <td>Fullstack Developer</td>
                     <td>2023</td>
                 </tr>
             </table>
@@ -68,28 +68,32 @@
             officiis eligendi. Sit!</p>
             <div class="skill">
                 <div>
-                    <img src="image/logo.png" alt="" />
+                    <i class="fa-brands fa-js" width="150px"></i>
                     <h2>Javascript</h2>
-                    <p text-align="justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas earum aliquam corrupti nihil. Tempora, labore. Eum cum alias sequi cupiditate impedit corporis fugit, veniam magni nostrum nesciunt officiis eligendi. Sit
-                    </p>
+                    <p style="text-align: justify">Lorem ipsum dolor sit, amet amet consectetur adipisicing elit.</p>
                 </div>
                 <div>
-                    <img src="image/logo.png" alt="" />
-                    <h2>Github</h2>
-                    <p text-align="justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas earum aliquam corrupti nihil. Tempora, labore. Eum cum alias sequi cupiditate impedit corporis fugit, veniam magni nostrum nesciunt officiis eligendi. Sit</p>
+                    <i class="fa-brands fa-react"></i>
+                    <h2>React JS</h2>
+                    <p style="text-align: justify">Lorem ipsum dolor sit, amet amet consectetur adipisicing elit.</p>
                 </div>
                 <div>
-                    <img src="image/logo.png" alt="" />
-                    <h2>Deployment</h2>
-                    <p text-align="justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas earum aliquam corrupti nihil. Tempora, labore. Eum cum alias sequi cupiditate impedit corporis fugit, veniam magni nostrum nesciunt officiis eligendi. Sit</p>
+                    <i class="fa-brands fa-node"></i>
+                    <h2>Node JS</h2>
+                    <p style="text-align: justify">Lorem ipsum dolor sit, amet amet consectetur adipisicing elit.</p>
                 </div>
             </div>
             <div class="social-media">
                 <h2>Found me on</h2>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-square-instagram"></i>
+                <a href="https://www.linkedin.com/in/muhammad-rizki-budiman-12a71a24b" target="_blank">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a href="https://web.facebook.com/rinbm59" target="_blank">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="https://www.instagram.com/iki__59" target="_blank">
+                    <i class="fa-brands fa-square-instagram"></i>
+                </a>
             </div>
         </div>
     </section>
