--- a/index.html
+++ b/index.html
@@ -16,91 +16,83 @@
                     <li>
                         <img src="image/logo.png" alt="Dumbways_logo" />
                     </li>
-                     <li>
+                     <li class="item-collapse">
                         <a class="active" href="index.html">Home</a>
                     </li>
-                    <li>
+                    <li class="item-collapse">
                         <a href="my-project.html">My Project</a>
                     </li>
                  </ul>
             </div>
-            <div class="nav-right">
+            <div class="nav-right item-collapse">
                 <a href="contact.html">Contact</a>
             </div>
+            <div class="nav-right" id="barsmenu">
+                <button style="background-color: transparent; border: none; cursor: pointer;"
+                onclick="openHamburger()"
+                >
+                    <i class="fa-2x fa-solid fa-bars"></i>
+                </button>
+            </div>
         </nav>
-        <div class="container">
-                <section>
-                    <div class="left">
-        <div style="
-        width: 300px;
-        border: 1px solid #dbdbdb;
-        margin: 0 auto;
-        padding: 10px;
-        border-radius: 10px;
-        box-shadow: 0 0 15px #cecece
-        "
-        >
-            <img style="width: 100%; border-radius: 10px 10px 0 0"
+
+        <div class="hamburger-nav-container" id="hamburger-nav-container">
+            <a href="index.html" class="hamburger-active">Home</a>
+            <a href="my-project.html">My Project</a>
+            <a href="contact.html">Contact</a>
+          </div>
+          
+          <div class="container">
+            <section>
+            <div class="left">
+                <h2>Hi Welcome to My Hut</h2>
+                <p style="text-align: justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non scelerisque purus.
+                    Nam ornare placerat iaculis. Suspendisse ac magna sit amet neque interdum sodales. In condimentum purus at rhoncus lobortis.
+                    Aliquam eu nisl a magna varius suscipit. Etiam ac leo in tortor pellentesque pretium. Integer porttitor enim varius nisl efficitur facilisis.
+                    Aliquam ut mi ante. Nam pellentesque vel mi id vulputate. Vivamus vel faucibus orci. Morbi sollicitudin interdum laoreet. Praesent a felis eu ligula ultricies accumsan a sed dolor.</p>
+                <div class="contact-cv">
+                    <div class="contact-button">
+                        <button>
+                            <a href="contact.html" style="color: white">Contact</a>
+                        </button>
+                    </div>
+                    <div class="cv-button">
+                        <a href="https://www.linkedin.com/in/muhammad-rizki-budiman-12a71a24b" target="_blank">
+                            <p>download Cv
+                                <i class="fa-solid fa-download"></i>
+                            </p>
+                        </a>
+                    </div>
+                </div>
+                <div class="social-media" class="card-container">
+                    <h2>Found me on</h2>
+                    <a href="https://www.linkedin.com/in/muhammad-rizki-budiman-12a71a24b" target="_blank">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                    <a href="https://web.facebook.com/rinbm59" target="_blank">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                    <a href="https://www.instagram.com/iki__59" target="_blank">
+                        <i class="fa-brands fa-square-instagram"></i>
+                    </a>
+                </div>
+            </div>
+        <div class="right">
+        <div class="card-me">
+            <img
             src="image/kucing.jpg"
             alt="menggg"/>
-            <h2 style="text-align: center">Muhammad Rizki B</h2>
-
-            <table style="border: 1px solid grey; width: 100%; text-align: center; border-collapse: collapse; margin-bottom: 10px
-            "
-            cellpadding="5px">
-                <tr style="background-color: grey; color: white">
-                    <th>Experience</th>
-                    <th>Year</th>
-                </tr>
-                <tr>
-                    <td>Fullstack Developer</td>
-                    <td>2023</td>
-                </tr>
-            </table>
-            <!--style width 100% persen diatas namanya sistem parent and child, artinya gambar 100% memenuhi border 350 px diatas
-                semakin naik angka suatu header makin kecil h1 paling besar dan seterusnya-->
-            </div>
+                <h2 style="text-align: center; line-height: 15px">Muhammad Rizki B</h2>
+                <p style="text-align: center; line-height: -0%; margin-bottom: 15px">Fullstack Developer</p>
         </div>
-        <div class="right">
-            <h2>Hi Welcome to My Profile</h2>
-            <p style="text-align: justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas earum aliquam corrupti
-            nihil. Tempora, labore. Eum cum alias sequi cupiditate impedit corporis fugit, veniam magni nostrum nesciunt
-            officiis eligendi. Sit!</p>
-            <div class="skill">
-                <div>
-                    <i class="fa-brands fa-js" width="150px"></i>
-                    <h2>Javascript</h2>
-                    <p style="text-align: justify">Lorem ipsum dolor sit, amet amet consectetur adipisicing elit.</p>
-                </div>
-                <div>
-                    <i class="fa-brands fa-react"></i>
-                    <h2>React JS</h2>
-                    <p style="text-align: justify">Lorem ipsum dolor sit, amet amet consectetur adipisicing elit.</p>
-                </div>
-                <div>
-                    <i class="fa-brands fa-node"></i>
-                    <h2>Node JS</h2>
-                    <p style="text-align: justify">Lorem ipsum dolor sit, amet amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div class="social-media">
-                <h2>Found me on</h2>
-                <a href="https://www.linkedin.com/in/muhammad-rizki-budiman-12a71a24b" target="_blank">
-                    <i class="fa-brands fa-linkedin"></i>
-                </a>
-                <a href="https://web.facebook.com/rinbm59" target="_blank">
-                    <i class="fa-brands fa-facebook"></i>
-                </a>
-                <a href="https://www.instagram.com/iki__59" target="_blank">
-                    <i class="fa-brands fa-square-instagram"></i>
-                </a>
-            </div>
-        </div>
+        <!--style width 100% persen diatas namanya sistem parent and child, artinya gambar 100% memenuhi border 350 px diatas
+            semakin naik angka suatu header makin kecil h1 paling besar dan seterusnya-->
     </section>
-        </div>
+    </div>
         <!--margin mengatur jarak sebelah atas, kanan bawah dan kiri konten sedangkan text align untuk mengatur konten kita mau ditaruh dimana
             margin/padding punya 4 value, yaitu atas, kanan, bawah, dan kiri-->    
         <!--semi coloun atau titik koma untuk memisahkan dua property-->
             <!--untuk melakukan grouping elemen agar mempermudah kita untuk melakukan styling-->
+        <script src="js/index.js"></script>
     </body>
 </html>
