--- a/project-detail.html
+++ b/project-detail.html
@@ -9,24 +9,37 @@
         referrerpolicy="no-referrer" >
     </head>
     <body>
-        <nav>
-            <div class="nav-left">
-                <ul>
-                    <li>
-                        <img src="image/logo.png" alt="Dumbways_logo" />
-                    </li>
-                     <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="my-project.html">My Project</a>
-                    </li>
-                 </ul>
-            </div>
-            <div class="nav-right">
-                <a href="contact.html">Contact</a>
-            </div>
-        </nav>
+      <nav>
+        <div class="nav-left">
+            <ul>
+                <li>
+                    <img src="image/logo.png" alt="Dumbways_logo" />
+                </li>
+                 <li class="item-collapse">
+                    <a class="active" href="index.html">Home</a>
+                </li>
+                <li class="item-collapse">
+                    <a href="my-project.html">My Project</a>
+                </li>
+             </ul>
+        </div>
+        <div class="nav-right item-collapse">
+            <a href="contact.html">Contact</a>
+        </div>
+        <div class="nav-right" id="barsmenu">
+            <button style="background-color: transparent; border: none; cursor: pointer;"
+            onclick="openHamburger()"
+            >
+                <i class="fa-2x fa-solid fa-bars"></i>
+            </button>
+        </div>
+    </nav>
+
+    <div class="hamburger-nav-container" id="hamburger-nav-container">
+        <a href="index.html" class="hamburger-active">Home</a>
+        <a href="my-project.html">My Project</a>
+        <a href="contact.html">Contact</a>
+      </div>
 
         <div class="project-detail">
             <div class="project-detail-container">
@@ -99,5 +112,15 @@
               </div>
             </div>
           </div>
+
+          <div class="ini-coba">
+            <div class="coba-left">
+              <p>Ini kan coba-coba</p>
+            </div>
+            <div class="coba-right">
+              <p>Ini juga ya</p>
+            </div>
+          </div>
+      <script src="js/index.js"></script>
     </body>
 </html>
