--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                  </ul>
             </div>
             <div class="nav-right item-collapse">
-                <a href="contact.html">Contact</a>
+                <a href="contact.html">Contact Me</a>
             </div>
             <div class="nav-right" id="barsmenu">
                 <button style="background-color: transparent; border: none; cursor: pointer;"
@@ -39,7 +39,13 @@
         <div class="hamburger-nav-container" id="hamburger-nav-container">
             <a href="index.html" class="hamburger-active">Home</a>
             <a href="my-project.html">My Project</a>
-            <a href="contact.html">Contact</a>
+            <div class="hamburger-contact">
+                <a href="contact.html">
+                    <p>
+                        Contact
+                    </p>
+                </a>
+            </div>
           </div>
           
           <div class="container">
