Add OOP Testimonials

--- a/my-project.html
+++ b/my-project.html
@@ -21,6 +21,9 @@
                 <li class="item-collapse">
                     <a class="active" href="my-project.html">My Project</a>
                 </li>
+                <li class="item-collapse">
+                  <a href="testimonials.html">Testimonials</a>
+              </li>
              </ul>
         </div>
         <div class="nav-right item-collapse">
@@ -38,6 +41,7 @@
     <div class="hamburger-nav-container" id="hamburger-nav-container">
         <a href="index.html">Home</a>
         <a href="my-project.html" class="hamburger-active">My Project</a>
+        <a href="testimonials.html">Testimonials</a>
         <div class="hamburger-contact">
           <a href="contact.html">
               <p>
